user offering, staff addition

--- a/frontend2/src/app/app.sass
+++ b/frontend2/src/app/app.sass
@@ -12,3 +12,20 @@ a
   justify-content: center
 body
   font-family: Roboto
+
+.width100
+  width: 100%
+
+.flexBetween
+  align-items: center
+  justify-content: space-between
+  margin: 1em
+
+.scaled2
+  transform: scale(2)
+
+.font150
+  font-size: 150%
+
+.marginLeft
+  margin-left: 2rem
