--- a/frontend2/src/components/admin/styles.sass
+++ b/frontend2/src/components/admin/styles.sass
@@ -1,12 +1,13 @@
 .paper
   margin: 16px 32px 16px 0
+  width: 15rem
 
 .activeLink>div
 
   box-shadow: inset 12px 0 1px -8px #03A9F4
 
 .adminContent
-  padding: 2em
+  padding: 2rem
   width: 100%
 
 .img
