added instagram token receiving

--- a/frontend2/src/components/home/styles.sass
+++ b/frontend2/src/components/home/styles.sass
@@ -6,8 +6,9 @@ text
 
 ellipse
     fill: #ccc
-    box-shadow: 10px 10px 5px 5px #888888
-
+    box-shadow: 4px 4px 2px 2px #888888
+.width50
+  width: 50%
 
 .node:hover ellipse
     fill: orange
@@ -17,5 +18,13 @@ g:hover
     z-index: 100
 
 .title-padding
-  padding:  0.9em 0.7em 0.9em 1.9em
+  padding:  0.1rem 0.7rem 0.2rem 1.9rem
+
+.flexWrap
+  flex-wrap: wrap
+.marginTop
+  margin-top: 3rem
+
+.margin
+  margin: .5rem!important
 
